spacing fix

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -53,7 +53,7 @@ h3 {
 p {
   font-family: $fontstack;
   font-size: 16px;
-  margin-bottom: 18px
+  margin-bottom: 10px
 }
 
 a:hover, a:visited, a:link, a:active {
